--- a/app/src/main/res/layout/sub_item.xml
+++ b/app/src/main/res/layout/sub_item.xml
@@ -9,82 +9,106 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:elevation="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/iconWrapperitem"
-            android:orientation="horizontal"
-            >
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/iconWrapperitem"
+                android:orientation="horizontal"
+                >
 
-            <ImageView
-                android:id="@+id/itemImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:scaleType="fitXY"
-                app:srcCompat="@android:drawable/ic_menu_report_image" />
+                <ImageView
+                    android:id="@+id/itemImage"
+                    android:layout_width="80dp"
+                    android:layout_height="75dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:layout_margin="5dp"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/detailWrapper"
+                    android:layout_weight="10"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/subName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="3dp"
+                        android:text="Substance Name"
+                        android:textAlignment="textStart"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/addText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="3dp"
+                            android:text="0.55 mg/dL"
+                            android:textAlignment="textStart"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:id="@+id/subAvg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="3dp"
+                            android:layout_marginRight="10dp"
+                            android:text="1.63"
+                            android:textAlignment="textEnd"
+                            android:textSize="20sp"
+                            android:layout_alignParentRight="true"
+                            />
+
+                    </RelativeLayout>
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingBottom="1dp"
+                        android:progress="20" />
+                    />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="10"
-                android:orientation="vertical">
+                android:id="@+id/chartWrapperitem"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:background="@color/gray">
 
                 <TextView
-                    android:id="@+id/subName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="3dp"
-                    android:text="Substance Name"
-                    android:textAlignment="textStart"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    />
-                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="10"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/addText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="3dp"
-                        android:text="0.55 mg/dL"
-                        android:textAlignment="textStart"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/subAvg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="3dp"
-                        android:layout_marginRight="10dp"
-                        android:text="1.63"
-                        android:textAlignment="textEnd"
-                        android:textSize="20sp"
-                        android:layout_alignParentRight="true"
-                        />
-
-                </RelativeLayout>
-
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="1dp"
-                    android:progress="20" />
-                />
+                    android:text="INVISIBLE TEXT UNDER THE CARD VIEW ..."
+                    android:textAlignment="center" />
             </LinearLayout>
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
