Adding a Timer to generate Random values and displaying them into the fragment.

--- a/app/src/main/res/layout/sub_item.xml
+++ b/app/src/main/res/layout/sub_item.xml
@@ -94,19 +94,21 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/chartWrapperitem"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/chartWrapperitem"
-                android:orientation="vertical"
                 android:layout_gravity="center"
-                android:background="@color/gray">
+                android:background="@color/gray"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
+                    android:id="@+id/chartDescription"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/chartDescription"
                     android:text="INVISIBLE TEXT UNDER THE CARD VIEW ..."
                     android:textAlignment="center" />
+
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
