--- a/app/src/main/res/layout/sub_item.xml
+++ b/app/src/main/res/layout/sub_item.xml
@@ -15,6 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/insideCard"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -87,7 +88,8 @@
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:paddingBottom="1dp"
-                        android:progress="20" />
+                        android:max="20"
+                        android:progress="5" />
                     />
                 </LinearLayout>
 
