--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#8bbe1b</color>
+    <color name="colorPrimaryDark">#8bbe1b</color>
+
+    <color name="background">#EEEDEF</color>
     <color name="colorAccent">#D81B60</color>
     <color name="gray">#51DFDFDF</color>
+    <color name="transparentRed">#66F71100</color>
     <color name="transparent">#00FFFFFF</color>
+
+    <color name="black">#000000</color>
 </resources>
