--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:endColor="@color/colorPrimary"
+        android:endColor="@color/shadowGreen"
         android:startColor="@color/transparent"
         android:angle="270"
         android:centerX="99%"
