--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,24 +5,43 @@
     android:id="@+id/layout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
     android:orientation="vertical"
-    android:padding="30dp"
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
     tools:context=".MainActivity">
 
-    <ImageButton
+    <!--<ImageButton
         android:id="@+id/backhome"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="end|top"
         android:background="@color/colorPrimary"
-        android:src="@drawable/ic_home_black_24dp" />
+        android:src="@drawable/ic_home_black_24dp" />-->
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="110dp"
         app:srcCompat="@drawable/mainlogo" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/gray" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="new user regstration"
+        android:textSize="15sp"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textColor="@color/colorDarkblue"
+        android:layout_marginTop="5sp"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/idname"
@@ -38,6 +57,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Full Name"
+            android:textColor="@color/colorBlue"
+            android:textColorHint="@color/colorBlue"
             android:inputType="text"
             android:textSize="20sp" />
     </android.support.design.widget.TextInputLayout>
@@ -57,6 +78,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Blood Group"
+            android:textColor="@color/colorBlue"
+            android:textColorHint="@color/colorBlue"
             android:inputType="text"
             android:textSize="20sp" />
     </android.support.design.widget.TextInputLayout>
@@ -76,6 +99,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Age"
+            android:textColor="@color/colorBlue"
+            android:textColorHint="@color/colorBlue"
             android:inputType="date"
             android:textSize="20sp" />
     </android.support.design.widget.TextInputLayout>
@@ -116,8 +141,8 @@
         android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/btnloginbg"
         android:text="Register"
         android:textColor="#ffffff"
 
@@ -127,8 +152,8 @@
         android:id="@+id/reset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btnloginbg"
         android:enabled="false"
         android:text="Reset"
         android:textColor="#ffffff"
