--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="top|right"
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -64,7 +66,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/doppio_one"
             android:gravity="center"
-            android:text="Patient name"
+            android:text="Please Register First"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
@@ -93,7 +95,8 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/dosageLayout">
 
                 <ImageButton
                     android:id="@+id/dosage"
@@ -118,7 +121,8 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp">
+                android:layout_marginLeft="10dp"
+                android:id="@+id/repportLayout">
 
                 <ImageButton
                     android:id="@+id/repport"
@@ -153,7 +157,8 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/registerLayout">
 
                 <ImageButton
                     android:id="@+id/register"
@@ -178,7 +183,8 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp">
+                android:layout_marginLeft="10dp"
+                android:id="@+id/resetLayout">
 
                 <ImageButton
                     android:id="@+id/reset"
@@ -204,16 +210,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabhome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_info_outline_black_24dp" />
 
 
 </RelativeLayout>
