--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,14 +10,6 @@
     android:paddingLeft="30dp"
     tools:context=".MainActivity">
 
-    <!--<ImageButton
-        android:id="@+id/backhome"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="end|top"
-        android:background="@color/colorPrimary"
-        android:src="@drawable/ic_home_black_24dp" />-->
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -44,7 +36,7 @@
         android:layout_marginTop="5sp"/>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/idname"
+        android:id="@+id/nameWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -64,12 +56,11 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/idblood"
+        android:id="@+id/bloodgpWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:focusable="true"
-
         android:focusableInTouchMode="true">
 
         <EditText
@@ -85,12 +76,11 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/idbirth"
+        android:id="@+id/birthWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:focusable="true"
-
         android:focusableInTouchMode="true">
 
         <EditText
@@ -126,7 +116,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="Male"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/female"
@@ -148,16 +139,6 @@
 
         android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/reset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btnloginbg"
-        android:enabled="false"
-        android:text="Reset"
-        android:textColor="#ffffff"
-        android:textSize="22sp" />
 
 
 </LinearLayout>
