--- a/app/src/main/res/layout/sub_item.xml
+++ b/app/src/main/res/layout/sub_item.xml
@@ -8,6 +8,8 @@
         android:layout_height="match_parent"
         android:id="@+id/card_view"
         android:layout_gravity="center"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:elevation="10dp"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
@@ -26,17 +28,17 @@
 
                 <ImageView
                     android:id="@+id/itemImage"
-                    android:layout_width="80dp"
-                    android:layout_height="75dp"
+                    android:layout_width="65dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
-                    android:layout_margin="5dp"
                     android:scaleType="fitXY"
                     app:srcCompat="@android:drawable/ic_menu_report_image" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/detailWrapper"
                     android:layout_weight="10"
                     android:orientation="vertical">
@@ -45,7 +47,6 @@
                         android:id="@+id/subName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="3dp"
                         android:text="Substance Name"
                         android:textAlignment="textStart"
                         android:textSize="20sp"
@@ -61,7 +62,6 @@
                             android:id="@+id/addText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:padding="3dp"
                             android:text="0.55 mg/dL"
                             android:textAlignment="textStart"
                             android:textSize="15sp" />
@@ -70,7 +70,6 @@
                             android:id="@+id/subAvg"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:padding="3dp"
                             android:layout_marginRight="10dp"
                             android:text="1.63"
                             android:textAlignment="textEnd"
@@ -108,6 +107,7 @@
                     android:id="@+id/chartDescription"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center"
                     android:text="INVISIBLE TEXT UNDER THE CARD VIEW ..."
                     android:textAlignment="center" />
 
