--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="red">#FF0000</color>
     <color name="yellow">#FFE600</color>
     <color name="lightgreen">#009688</color>
+    <color name="lightblue">#A12196F3</color>
 </resources>
